--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-intl": "^3.26.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
