--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "next-intl": "^3.26.3",
+    "nodemailer": "^6.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
